--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
 body {
-  color: #444;
+  color: rgb(236, 228, 238);
+  background-color: blueviolet;
   font-family: sans-serif;
-
-  border-top: 10px solid #1098ad;
   position: relative;
 }
 
 .container {
   width: 800px;
-  /* margin-left: auto;
-  margin-right: auto; */
   margin: 0 auto;
 }
 
 .main-header {
-  background-color: #f7f7f7;
+  background-color: #393838ae;
   /* padding: 20px;
   padding-left: 40px;
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
+  text-align: center;
   /* height: 80px; */
+}
+
+.nav-link { 
+  padding-right: 20px;
+  color: rgb(193, 227, 21);
 }
